test/conformance/chainsaw/generating-policies/data/sync/sync-delete-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-sync-delete-policy
