test/conformance/chainsaw/generating-policies/data/sync/sync-delete-policy/configmap-assert.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  name: data-sync-delete-policy
  namespace: data-sync-delete-policy
