test/conformance/chainsaw/generating-policies/data/sync/sync-delete-policy/configmap-error.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: data-sync-delete-policy
  namespace: data-sync-delete-policy
