test/conformance/chainsaw/generating-policies/data/sync/sync-delete-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: data-sync-delete-policy
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that the configmap is generated
    try:
    - assert:
        file: configmap-assert.yaml
  - name: delete the policy
    try:
    - delete:
        ref:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: GeneratingPolicy
          name: zk-kafka-address
  - name: sleep
    try:
    - sleep:
        duration: 3s
  - name: check that the downstream is deleted
    try:
    - error:
        file: configmap-error.yaml
